# ds_exercise1

./: CMakeCache.txt  CMakeLists.txt  Makefile  Server.c  cMakeLists.txt  client.c  cmake_install.cmake  keys.c  lib.c  lib.h  server.c
apps/: server.c
src/: lib.c
